--- a/html_intro_answers.html
+++ b/html_intro_answers.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <section>
@@ -45,6 +46,15 @@
             <p>When an alien race called Mimics invades and destroys Europe, London is the last resistance in the Old Continent. General Brigham plans an attack to France expecting to defeat the Mimics and orders Major William Cage, who is an American public relation officer, to cover the invasion. However Cage does not accept the assignment and threatens General Brigham to expose the casualties. He is arrested, accused of desertion, demoted to private and assigned to fight in the invasion under the command of the tough Sergeant Farell in the Heathrow Base. Humans are slaughtered in the invasion and Cage kills a Mimic and is sprayed by his blood; in less than five minutes combat, Cage dies. Surprisingly he awakes in the Heathrow Base and relives the same day over and over after dieing. Each time, Cage tries to fix the deaths of his squad and he meets Sergeant Rita Vrataski who asks him to find her when he awakes in the base. Rita brings Cage to meet Dr. Carter who explains to him that he killed an Alpha and his blood has given the ability to reset time. Further, the last hope of earth is the destruction of the Mimic leader, referred to as the Omega, who is hidden. Will Cage and Rita succeed in their solitary mission?</p>
         </div>
     </section>
+    <footer class="bg-dark text-white py-4">
+        <div class="container text-center">
+            <p class="mb-1">&copy; 2024 Your Company. All rights reserved.</p>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="https://github.com/JohnLicode" class="text-white">Github</a></li>
+                <li class="list-inline-item"><a href="https://www.facebook.com/johnlenard.libertad.9" class="text-white">Facebook</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
