--- a/html_intro_answers.html
+++ b/html_intro_answers.html
@@ -1,60 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
     <section>
-        <div>
-            <h1>html tags used cozy-cup-boilerplate</h1>
-            <ul>
-                <li>div</li>
-                <li>section</li>
-                <li>br</li>
-                <li>nav</li>
-                <li>img</li>
-                <li>ul</li>
-                <li>li</li>
-                <li>a</li>
-                <li>span</li>
-                <li>p</li>
-                <li>h1,h2,h3,etc..</li>
-            </ul>
-        </div>
-        <div>
-            <h1>Edge of Tommorow Movie</h1>
-            <p>When Earth falls under attack from invincible aliens, no military unit in the world is able to beat them. Maj.
-                 William Cage (Tom Cruise), an officer who has never seen combat, is assigned to a suicide mission. Killed within moments, 
-                 Cage finds himself thrown into a time loop, in which he relives the same brutal fight -- and his death -- over and over again. 
-                 However, Cage's fighting skills improve with each encore, bringing him and a comrade (Emily Blunt) ever closer to defeating the aliens.
-            </p>
-        </div>
+      <div>
+        <h1>html tags used cozy-cup-boilerplate</h1>
+        <ul>
+          <li>div</li>
+          <li>section</li>
+          <li>br</li>
+          <li>nav</li>
+          <li>img</li>
+          <li>ul</li>
+          <li>li</li>
+          <li>a</li>
+          <li>span</li>
+          <li>p</li>
+          <li>h1,h2,h3,etc..</li>
+        </ul>
+      </div>
+      <div>
+        <h1>Edge of Tommorow Movie</h1>
+        <p>
+          When Earth falls under attack from invincible aliens, no military unit
+          in the world is able to beat them. Maj. William Cage (Tom Cruise), an
+          officer who has never seen combat, is assigned to a suicide mission.
+          Killed within moments, Cage finds himself thrown into a time loop, in
+          which he relives the same brutal fight -- and his death -- over and
+          over again. However, Cage's fighting skills improve with each encore,
+          bringing him and a comrade (Emily Blunt) ever closer to defeating the
+          aliens.
+        </p>
+      </div>
     </section>
     <section>
-        <div>
-            <h2>Main Characters</h2>
-            <p>Tom Cruise as Major Williams Cage -a public relations officer with no combat experience, is forced by his superiors to join a landing operation against the aliens, only to find himself experiencing a time loop as he tries to find a way to defeat the invaders. Bill Paxton and Brendan Gleeson also appear in supporting roles. </p>
-            <p>Emily BLunt as Rita Vrataski -stars opposite Cruise as Sergeant Rita Vrataski. Known as the “Angel of Verdun”, Rita is a United Defense Force war hero who is tasked with training Cage. Trapped in a loop of her own and seeing visions of Mimic Omega, Rita becomes aware of Cage’s loops, making the two strong allies and eventual love-interests.</p>
-        </div>
+      <div>
+        <h2>Main Characters</h2>
+        <p>
+          Tom Cruise as Major Williams Cage -a public relations officer with no
+          combat experience, is forced by his superiors to join a landing
+          operation against the aliens, only to find himself experiencing a time
+          loop as he tries to find a way to defeat the invaders. Bill Paxton and
+          Brendan Gleeson also appear in supporting roles.
+        </p>
+        <p>
+          Emily BLunt as Rita Vrataski -stars opposite Cruise as Sergeant Rita
+          Vrataski. Known as the “Angel of Verdun”, Rita is a United Defense
+          Force war hero who is tasked with training Cage. Trapped in a loop of
+          her own and seeing visions of Mimic Omega, Rita becomes aware of
+          Cage’s loops, making the two strong allies and eventual
+          love-interests.
+        </p>
+      </div>
     </section>
     <section>
-        <div>
-            <h3>Movie Plot</h3>
-            <p>When an alien race called Mimics invades and destroys Europe, London is the last resistance in the Old Continent. General Brigham plans an attack to France expecting to defeat the Mimics and orders Major William Cage, who is an American public relation officer, to cover the invasion. However Cage does not accept the assignment and threatens General Brigham to expose the casualties. He is arrested, accused of desertion, demoted to private and assigned to fight in the invasion under the command of the tough Sergeant Farell in the Heathrow Base. Humans are slaughtered in the invasion and Cage kills a Mimic and is sprayed by his blood; in less than five minutes combat, Cage dies. Surprisingly he awakes in the Heathrow Base and relives the same day over and over after dieing. Each time, Cage tries to fix the deaths of his squad and he meets Sergeant Rita Vrataski who asks him to find her when he awakes in the base. Rita brings Cage to meet Dr. Carter who explains to him that he killed an Alpha and his blood has given the ability to reset time. Further, the last hope of earth is the destruction of the Mimic leader, referred to as the Omega, who is hidden. Will Cage and Rita succeed in their solitary mission?</p>
-        </div>
+      <div>
+        <h3>Movie Plot</h3>
+        <p>
+          When an alien race called Mimics invades and destroys Europe, London
+          is the last resistance in the Old Continent. General Brigham plans an
+          attack to France expecting to defeat the Mimics and orders Major
+          William Cage, who is an American public relation officer, to cover the
+          invasion. However Cage does not accept the assignment and threatens
+          General Brigham to expose the casualties. He is arrested, accused of
+          desertion, demoted to private and assigned to fight in the invasion
+          under the command of the tough Sergeant Farell in the Heathrow Base.
+          Humans are slaughtered in the invasion and Cage kills a Mimic and is
+          sprayed by his blood; in less than five minutes combat, Cage dies.
+          Surprisingly he awakes in the Heathrow Base and relives the same day
+          over and over after dieing. Each time, Cage tries to fix the deaths of
+          his squad and he meets Sergeant Rita Vrataski who asks him to find her
+          when he awakes in the base. Rita brings Cage to meet Dr. Carter who
+          explains to him that he killed an Alpha and his blood has given the
+          ability to reset time. Further, the last hope of earth is the
+          destruction of the Mimic leader, referred to as the Omega, who is
+          hidden. Will Cage and Rita succeed in their solitary mission?
+        </p>
+      </div>
+      <br />
     </section>
-    <footer class="bg-dark text-white py-4">
-        <div class="container text-center">
-            <p class="mb-1">&copy; 2024 Your Company. All rights reserved.</p>
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="https://github.com/JohnLicode" class="text-white">Github</a></li>
-                <li class="list-inline-item"><a href="https://www.facebook.com/johnlenard.libertad.9" class="text-white">Facebook</a></li>
-            </ul>
-        </div>
-    </footer>
-</body>
+    <section>
+      <!---Pre dito mo ilagay Gagawin mo na Activity 3--->
+    </section>
+    <section>
+      <img
+        src="img/output04.jpg"
+        style="width: 100%; height: 100vh; object-fit: cover"
+        alt="Filipino in Traditional Dress"
+      />
+    </section>
 
+    <section>
+      <!--Pre dito mo lagay Gagawin mo na Activity 5-->
+    </section>
+
+    <footer class="bg-dark text-white py-4">
+      <div class="container text-center">
+        <p class="mb-1">&copy; 2024 Your Company. All rights reserved.</p>
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <a href="https://github.com/JohnLicode" class="text-white"
+              >Github</a
+            >
+          </li>
+          <li class="list-inline-item">
+            <a
+              href="https://www.facebook.com/johnlenard.libertad.9"
+              class="text-white"
+              >Facebook</a
+            >
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
