--- a/html_intro_answers.html
+++ b/html_intro_answers.html
@@ -90,7 +90,23 @@
       <br />
     </section>
     <section>
-      <!---Pre dito mo ilagay Gagawin mo na Activity 3--->
+      <ol>
+        <li>Thailand</li>
+        <li>Cambodia</li>
+        <li>Vietnam
+            <ol>
+                <li>Mango
+                    <ul>
+                        <li>Guimaras Mango</li>
+                        <li>Indian Mango</li>
+                        <li>Apple Mango</li>
+                        <li>Kaong Mango</li>
+                    </ul>
+                </li>
+                <li>Strawberray</li>
+            </ol>
+        </li>
+      </ol>
     </section>
     <section>
       <img
