Fixed Activity 3 and finished Activity 5

--- a/html_intro_answers.html
+++ b/html_intro_answers.html
@@ -94,7 +94,7 @@
         <li>Thailand</li>
         <li>Cambodia</li>
         <li>Vietnam
-            <ol>
+            <ul>
                 <li>Mango
                     <ul>
                         <li>Guimaras Mango</li>
@@ -103,10 +103,10 @@
                         <li>Kaong Mango</li>
                     </ul>
                 </li>
-                <li>Strawberray</li>
-            </ol>
+                <li>Strawberry</li>
+            </ul>
         </li>
-      </ol>
+    </ol>    
     </section>
     <section>
       <img
@@ -117,7 +117,9 @@
     </section>
 
     <section>
-      <!--Pre dito mo lagay Gagawin mo na Activity 5-->
+      <p>"The impediment to action advances action. What stands in the way becomes the way." - <b>Marcus Aurelius</b></p>
+      <p>"We suffer more often in imagination than in reality." - <I>Seneca</I></p>
+      <p>"The only way to do great work is to love what you do." - <I><b>Epictetus</b></I></p>
     </section>
 
     <footer class="bg-dark text-white py-4">
