--- a/html_intermediate/employee_reg.html
+++ b/html_intermediate/employee_reg.html
@@ -70,7 +70,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Employee Registration</h1>
+        <h1>Employee Registration</h1><br>
         <form action="#" method="post" id="registration-form">
             <div class="form-group">
                 <label for="last_name">Last Name:</label>
