Minor changes in Activity 2

--- a/html_intro_answers.html
+++ b/html_intro_answers.html
@@ -138,6 +138,13 @@
               >Facebook</a
             >
           </li>
+          <li class="list-inline-item">
+            <a
+              href="#"
+              class="text-white"
+              >Email</a
+            >
+          </li>
         </ul>
       </div>
     </footer>
